Remove typing input bar and display only current letter in center

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     
     <div class="container">
         <div class="typing-area">
-            <input type="text" id="typingInput" placeholder="Start typing to find your calm..." autocomplete="off">
-            <div id="currentWord" class="current-word"></div>
+            <input type="text" id="typingInput" placeholder="Start typing to find your calm..." autocomplete="off" style="display: none;">
+            <div id="currentLetter" class="current-letter"></div>
         </div>
         
         <div id="wordHistory" class="word-history hidden">
