--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="typing-area">
             <input type="text" id="typingInput" placeholder="Start typing to find your calm..." autocomplete="off" style="display: none;">
             <div id="currentLetter" class="current-letter"></div>
+            <div id="wordSuggestion" class="word-suggestion"></div>
         </div>
         
         <div id="wordHistory" class="word-history hidden">
@@ -36,6 +37,7 @@
         <button id="musicToggle" class="music-toggle">🔊</button>
     </div>
     
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
