--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     
     <div class="controls">
         <button id="musicToggle" class="music-toggle">🔊</button>
+        <!-- rotate table button: click to switch theme (blue <-> yellow) -->
+        <button id="rotateTable" class="rotate-table" title="Rotate table (change background)">
+            <span class="table-face"></span>
+        </button>
     </div>
     
     <script src="config.js"></script>
