--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- 鱼的容器 -->
+    <div id="fish-layer" aria-hidden="true">
+    </div>
+
     <div class="ocean-background">
         <div class="waves"></div>
         <div class="waves"></div>
@@ -36,6 +40,7 @@
         <button id="musicToggle" class="music-toggle">🔊</button>
     </div>
     
+    <script src="fish.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
