--- a/index.html
+++ b/index.html
@@ -2420,6 +2420,140 @@
                 }
             }
         });
+
+        // --- Tutorial button & panel ---
+        // Create tutorial HTML elements (button + panel)
+        (function setupTutorial() {
+            // Styles: inject minimal rules to keep everything in one file
+            const style = document.createElement('style');
+            style.textContent = `
+            /* Tutorial button (bottom-right) */
+            #tutorial-btn {
+                position: fixed;
+                right: 20px;
+                bottom: 20px;
+                width: 56px;
+                height: 56px;
+                border-radius: 12px;
+                background: rgba(50,50,60,0.95);
+                color: #fff;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 2200;
+                cursor: pointer;
+                box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+                transition: transform 0.18s ease, background 0.18s ease;
+                backdrop-filter: blur(6px);
+            }
+            #tutorial-btn:hover { transform: translateY(-3px) scale(1.03); }
+
+            /* Tutorial panel */
+            #tutorial-panel {
+                position: fixed;
+                right: 20px;
+                bottom: 92px;
+                width: 320px;
+                max-width: calc(100% - 40px);
+                background: rgba(255,255,255,0.98);
+                color: #111;
+                border-radius: 12px;
+                box-shadow: 0 12px 30px rgba(0,0,0,0.22);
+                padding: 16px;
+                z-index: 2199;
+                transform-origin: bottom right;
+                transform: translateY(12px) scale(0.98);
+                opacity: 0;
+                pointer-events: none;
+                transition: opacity 0.18s ease, transform 0.18s ease;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 14px;
+            }
+            #tutorial-panel.show {
+                transform: translateY(0) scale(1);
+                opacity: 1;
+                pointer-events: auto;
+            }
+
+            #tutorial-panel h4 { margin: 0 0 8px 0; font-size: 16px; }
+            #tutorial-panel p { margin: 6px 0; line-height: 1.4; color: #222; }
+            #tutorial-panel .tutorial-actions { display:flex; gap:8px; margin-top:10px; }
+            #tutorial-panel button { flex:1; padding:8px 10px; border-radius:8px; border:none; cursor:pointer; }
+            #tutorial-panel .close-btn { background:#333; color:#fff; }
+            #tutorial-panel .more-btn { background:transparent; border:1px solid #ddd; }
+            `;
+            document.head.appendChild(style);
+
+            // Button
+            const btn = document.createElement('button');
+            btn.id = 'tutorial-btn';
+            btn.title = 'Tutorial';
+            btn.setAttribute('aria-label', 'Open tutorial');
+            btn.innerHTML = `?`;
+            document.body.appendChild(btn);
+
+            // Panel
+            const panel = document.createElement('div');
+            panel.id = 'tutorial-panel';
+            panel.setAttribute('role', 'dialog');
+            panel.setAttribute('aria-hidden', 'true');
+            panel.innerHTML = `
+                <h4>How Calm Typing works</h4>
+                <p>This site turns your typed characters into floating calm visuals and saves words you type to build a personal history.</p>
+                <p>Basic actions:</p>
+                <ul style="margin:6px 0 0 18px; padding:0; color:#333;">
+                    <li>Type anywhere to create floating characters.</li>
+                    <li>Space saves the current word (auto-correct applied).</li>
+                    <li>Enter finalizes a sentence and triggers a gentle animation.</li>
+                    <li>Use the top-right controls to change background, audio, fonts, and size.</li>
+                </ul>
+                <div class="tutorial-actions">
+                    <button class="close-btn">Close</button>
+                    <button class="more-btn">Read README</button>
+                </div>
+            `;
+            document.body.appendChild(panel);
+
+            // Toggle logic
+            function openPanel() {
+                panel.classList.add('show');
+                panel.setAttribute('aria-hidden', 'false');
+                btn.setAttribute('aria-pressed', 'true');
+            }
+            function closePanel() {
+                panel.classList.remove('show');
+                panel.setAttribute('aria-hidden', 'true');
+                btn.setAttribute('aria-pressed', 'false');
+            }
+
+            btn.addEventListener('click', function(e) {
+                e.stopPropagation();
+                if (panel.classList.contains('show')) closePanel(); else openPanel();
+            });
+
+            // close when clicking outside
+            document.addEventListener('click', function(e) {
+                if (!panel.contains(e.target) && e.target !== btn) {
+                    closePanel();
+                }
+            });
+
+            // close on Escape
+            document.addEventListener('keydown', function(e) {
+                if (e.key === 'Escape') closePanel();
+            });
+
+            // Wire panel buttons
+            panel.querySelector('.close-btn').addEventListener('click', closePanel);
+            panel.querySelector('.more-btn').addEventListener('click', function() {
+                // Try to open README if available; fallback to alert with short guide
+                try {
+                    window.open('README.md', '_blank');
+                } catch (err) {
+                    alert('See the project README for more details.');
+                }
+            });
+        })();
     </script>
 </body>
 </html>
